# hackathon-teamD

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.ja.md  README.md  SECURITY.md  azure.yaml  pyproject.toml
scripts/fabric_data_overhaul/: .gitignore  README.md  generate_dataset.py  pyproject.toml  seed_distributions.json
scripts/fabric_data_overhaul/notebooks/: nb_load_travel_marketing_v2.ipynb
scripts/fabric_data_overhaul/samples/: booking_sample.csv  campaign_sample.csv  cancellation_sample.csv  customer_sample.csv  flight_sample.csv  hotel_sample.csv  inquiry_sample.csv  itinerary_item_sample.csv  payment_sample.csv  tour_review_sample.csv
scripts/fabric_data_overhaul/v2_artifacts/: README.md  bestof_strict.py  build_data_agent_v2.py  build_ontology_v2.py  build_sm_v2.py  debug_grade.py  enrich_ontology_v2.py  inspect_all_parts.py  inspect_lakehouse_part.py  inspect_lakehouse_schema.py  lakehouse_example_queries.json  ontology_enriched_v2.json  patch_demo_few_shot.py  patch_phase11d_instructions.py  phase10_summary.md  probe_live_da.py  probe_live_results.json  retry_failed.py  retry_results.json  revert_lakehouse_textinline_examples.py  smoke_after_phase10_enrich.json  smoke_after_phase10_tune.json  smoke_baseline_pre_phase10.json  smoke_demo_baseline.json  smoke_demo_prompts.py  smoke_demo_results.json  smoke_results.json  smoke_results_v6.json  smoke_results_v6_post_demo_few_shot.json  smoke_test_v2.py  smoke_warmup.json  tune_data_agent_v2.py  v2_ids.txt  verify_sm_v2.py
(+258 files in other folders)
