[project]
name = "fabric-data-overhaul"
version = "0.1.0"
description = "Hybrid seeded synthetic data generator for travel-marketing-ai Fabric v2 lakehouse"
requires-python = ">=3.14"
dependencies = [
    "faker>=37.0.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pyarrow>=20.0.0",
]

[tool.uv]
package = false
